syntax = "proto3";

// The .proto file starts with a package declaration, 
// which helps to prevent naming conflicts between different projects.
package greet;

// The "go_package option" defines the import path of the package 
// which will contain all the generated code for this file. 
// The Go package name will be the last path component of the import path. 
option go_package="greet/greetpb";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string result = 1;
}

message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string result = 1;
}

message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message GreetEveryoneResponse {
    string result = 1;
}

message GreetWithDedlineRequest {
    Greeting greeting = 1;
}

message GreetWithDedlineResponse {
    string result = 1;
}

service GreetService{
    // Unary
    rpc Greet(GreetRequest) returns (GreetResponse) {};

    // Server Streaming
    rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

    // Client Streaming
    rpc LongGreet (stream LongGreetRequest) returns (LongGreetResponse) {};

    // BiDi Streaming
    rpc GreetEveryone (stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};

    // Unary with Deadline.
    rpc GreetWithDedline(GreetWithDedlineRequest) returns (GreetWithDedlineResponse) {};
}